--- a/modules/cconverter/CMakeLists.txt
+++ b/modules/cconverter/CMakeLists.txt
@@ -3,7 +3,7 @@ get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 set(MODULE      "${DIR_NAME}")
 set(LIBRARY     "lib_${MODULE}")
 set(TESTS       "test_${MODULE}")
-# set(APPLICATION "app_${MODULE}")
+set(APPLICATION "app_${MODULE}")
 
 # Include directory with public headers
 include_directories("./")
@@ -12,10 +12,10 @@ include_directories(include)
 # Add all submodules
 add_subdirectory(src)
 add_subdirectory(test)
-# add_subdirectory(application)
+add_subdirectory(application)
 
 #############################################
 ##### Testing
 #############################################
 
-# include("CTestTests.txt")
+include("CTestTests.txt")
