--- a/modules/markDB/CMakeLists.txt
+++ b/modules/markDB/CMakeLists.txt
@@ -3,14 +3,13 @@ get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 set(MODULE      "${DIR_NAME}")
 set(LIBRARY     "lib_${MODULE}")
 set(TESTS       "test_${MODULE}")
+set(APPLICATION "app_${MODULE}")
 
 # Include directory with public headers
 include_directories("./")
 
-# Include directory
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
-FILE(GLOB hdrs "*.h*" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h*")
-
 # Add all submodules
-add_subdirectory(test)
 add_subdirectory(src)
+add_subdirectory(test)
+add_subdirectory(application)
+
