--- a/modules/markDB/src/CMakeLists.txt
+++ b/modules/markDB/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(target ${LIBRARY})
 
+file(GLOB hrcs "../include/*.h")
 file(GLOB srcs "*.cxx")
 
-add_library(${target} STATIC ${srcs})
+add_library(${target} STATIC ${hrcs} ${srcs})
 set_target_properties(${target}
     PROPERTIES OUTPUT_NAME ${MODULE})
 
