Revert "[Temporal] Removed other modules from testing"
This reverts commit 176aff5f758c006c3d7e2b90baad387deec51ed6.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,11 +58,10 @@ set(LIBRARY_DEPS "gtest")
 # Include all modules
 #
 
-#file(GLOB SUBDIRS "${CMAKE_CURRENT_SOURCE_DIR}/modules/*")
-#foreach(subdir ${SUBDIRS})
-#    add_subdirectory(${subdir})
-#endforeach()
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/modules/cconverter")
+file(GLOB SUBDIRS "${CMAKE_CURRENT_SOURCE_DIR}/modules/*")
+foreach(subdir ${SUBDIRS})
+    add_subdirectory(${subdir})
+endforeach()
 
 #
 # Report variables
