--- a/modules/interpolation-search/application/CMakeLists.txt
+++ b/modules/interpolation-search/application/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(target ${APPLICATION})
 
-file(GLOB srcs "*.cpp")
+file(GLOB srcs "*.c*")
 
 add_executable(${target} ${srcs})
 set_target_properties(${target}
