--- a/modules/interpolation-search/CMakeLists.txt
+++ b/modules/interpolation-search/CMakeLists.txt
@@ -12,3 +12,5 @@ include_directories("./" "./include")
 add_subdirectory(src)
 add_subdirectory(test)
 add_subdirectory(application)
+
+include(CTestTests.txt)
