--- a/modules/minesweeper/CMakeLists.txt
+++ b/modules/minesweeper/CMakeLists.txt
@@ -13,3 +13,9 @@ include_directories("include")
 add_subdirectory(src)
 add_subdirectory(test)
 add_subdirectory(application)
+ 
+#############################################
+##### Testing
+#############################################
+  
+include("CTestTests.txt")
