--- a/modules/determinant/CMakeLists.txt
+++ b/modules/determinant/CMakeLists.txt
@@ -3,16 +3,15 @@ get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 set(MODULE      "${DIR_NAME}")
 set(LIBRARY     "lib_${MODULE}")
 set(TESTS       "test_${MODULE}")
-# set(APPLICATION "app_${MODULE}")
+set(APPLICATION "app_${MODULE}")
 
 # Include directory with public headers
-include_directories("./")
-include_directories(include)
+include_directories("./include")
 
 # Add all submodules
 add_subdirectory(src)
 add_subdirectory(test)
-# add_subdirectory(application)
+add_subdirectory(application)
 
 #############################################
 ##### Testing
