--- a/modules/determinant/src/CMakeLists.txt
+++ b/modules/determinant/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(target ${LIBRARY})
 
 file(GLOB srcs "*.cxx")
+file(GLOB hrcs "../include/*.h")
 
-add_library(${target} STATIC ${srcs})
+add_library(${target} STATIC ${hrcs} ${srcs})
 set_target_properties(${target}
     PROPERTIES OUTPUT_NAME ${MODULE})
 
