--- a/modules/converter-temperature/CMakeLists.txt
+++ b/modules/converter-temperature/CMakeLists.txt
@@ -9,6 +9,7 @@ set(APPLICATION "app_${MODULE}")
 include_directories("./")
 
 # Add all submodules
+add_subdirectory(application)
 add_subdirectory(src)
 add_subdirectory(test)
 
